# Hook

./: .gitignore  Code_Modification_Guidelines.md  PROJECT_OVERVIEW.md  README.md  README.zh-CN.md  TECHNICAL_ARCHITECTURE.md  UIACCESS_DISTRIBUTION.md  app.config.ts  build-hook-release.bat  index.html  launch-config.cmd  legacy_clipboard_logic.md  package-hook-release.ps1  package-lock.json  package.json  start-hook-capture-test.bat  start-hook.bat  start-hook.vbs  stop-hook.bat  tsconfig.json  verify-hook-full.bat  代码修改规范_zh.md  功能.md
.github/workflows/: build-hook-exe.yml  release-hook-tag.yml
__tests__/: releasePackaging.contract.test.ts
__tests__/integration/: ActionsMenuEscapeContract.test.ts  AhrpCloudOutputContract.test.ts  ArtNodePropagationContract.test.ts  ArtNodeSpawnSizingContract.test.ts  ArtParamLinkTargetContract.test.ts  ArtScalarOutputContract.test.ts  CanvasSelection.test.tsx  CaptureInputShieldContract.test.ts  CaptureWindowStability.test.ts  (+106 more)
docs/: CODE_SIGNING_POLICY.md  MAINTAINER_SIGNING_GUIDE.md  README.md  RELEASE_STRATEGY.md  SIGNPATH_APPLICATION_CHECKLIST.md  SIGNPATH_APPLICATION_DRAFT.md
scripts/: build-local-hook-exe.ps1  build-static.cmd  clean-tauri-dist.mjs  dev-tauri.cmd  install-hook-uiaccess.ps1  package-uiaccess-installer-zip.ps1  run-tauri.cmd  run-vinxi.cmd  run-vitest.cmd  serve-static.cmd  serve-static.mjs  setup-hook-uiaccess-local-test.ps1
src/: app.css  app.tsx  constants.ts  entry-client.tsx  entry-server.tsx
src-tauri/: Cargo.toml  build.rs  dev-tauri.cmd  tauri.conf.json
src-tauri/crates/scap-targets/: Cargo.toml
(+190 files in other folders)
