[package]
name = "scap-targets"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
specta = { version = "=2.0.0-rc.20", features = ["derive", "serde_json", "uuid", "chrono"] }
image = "0.24"
tracing = "0.1.41"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/CapSoftware/cidre", rev = "bf84b67079a8", default-features = false, features = ["sc"] }
core-graphics = "0.24.0"
core-foundation = "0.10.0"
cocoa = "0.26.0"
objc = "0.2.7"
tokio = { version = "1.39.3", features = ["sync", "rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = [
	"Graphics_Capture",
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_System_WinRT",
	"Win32_System_WinRT_Graphics",
	"Win32_System_WinRT_Graphics_Capture",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_UI_HiDpi",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_Storage_FileSystem",
] }
